# polkit-rs

./: Cargo.toml  README.md
polkit/: Cargo.toml  Gir.toml
polkit-agent/: Cargo.toml  Gir.toml
polkit-agent-sys/: Cargo.toml  build.rs
polkit-agent-sys/src/: lib.rs
polkit-agent-sys/tests/: abi.rs  constant.c  layout.c  manual.h
polkit-agent/src/: lib.rs
polkit-agent/src/auto/: flags.rs  functions.rs  mod.rs  session.rs
polkit-agent/sys/: Cargo.toml  Gir.toml  build.rs
polkit-agent/sys/src/: lib.rs
polkit-agent/sys/tests/: abi.rs  constant.c  layout.c
polkit-sys/: Cargo.toml
polkit-sys/src/: lib.rs
polkit-sys/tests/: abi.rs  manual.h
polkit/src/: lib.rs
polkit/src/auto/: action_description.rs  authority.rs  authorization_result.rs  details.rs  enums.rs  flags.rs  identity.rs  mod.rs  permission.rs  subject.rs  system_bus_name.rs  temporary_authorization.rs  unix_group.rs  unix_netgroup.rs  unix_process.rs  unix_session.rs  unix_user.rs
polkit/sys/: Cargo.toml  Gir.toml
polkit/sys/src/: lib.rs
polkit/sys/tests/: abi.rs  constant.c  layout.c
