[workspace]
members = [
	"polkit",
	"polkit/sys",
	"polkit-agent",
	"polkit-agent/sys",
]

[patch.crates-io]
gio  = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gio-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-macros = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core" }
