[package]
name = "polkit-agent-sys"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
edition = "2018"
build = "build.rs"
keywords = [ "PolicyKit", "PolKit", "libpolkit-agent" ]
categories = [ "external-ffi-bindings", "authentication", "os::unix-apis" ]
description = "Low-level bindings for libpolkit-agent-1"
license = "Unlicense"
readme = "../README.md"
homepage = "https://github.com/DankBSD/polkit-rs"
repository = "https://github.com/DankBSD/polkit-rs"
documentation = "https://docs.rs/polkit-agent-sys/"

[package.metadata.system-deps.polkit_agent_1]
name = "polkit-agent-1"
version = "0.0"

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
glib-sys = "0"
gobject-sys = "0"
gio-sys = "0"
polkit-sys = "0"

[build-dependencies]
system-deps = "2.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
