[package]
name = "polkit-agent"
version = "0.15.0"
authors = ["Greg V <greg@unrelenting.technology>"]
edition = "2018"
keywords = [ "PolicyKit", "PolKit", "libpolkit-agent" ]
categories = [ "api-bindings", "authentication", "os::unix-apis" ]
description = "High-level bindings for libpolkit-agent-1"
license = "Unlicense"
readme = "../README.md"
homepage = "https://github.com/DankBSD/polkit-rs"
repository = "https://github.com/DankBSD/polkit-rs"
documentation = "https://docs.rs/polkit-agent/"

[dependencies]
libc = "0"
bitflags = "1"
ffi = { package = "polkit-agent-sys", path = "sys" }
glib = "=0.15.0"
gio = "=0.15.0"
polkit = { path = "../polkit" }
