[package]
name = "polkit"
version = "0.14.0"
authors = ["Greg V <greg@unrelenting.technology>"]
edition = "2018"
keywords = [ "PolicyKit", "PolKit", "libpolkit-gobject" ]
categories = [ "api-bindings", "authentication", "os::unix-apis" ]
description = "High-level bindings for libpolkit-gobject-1"
license = "Unlicense"
readme = "../README.md"
homepage = "https://github.com/DankBSD/polkit-rs"
repository = "https://github.com/DankBSD/polkit-rs"
documentation = "https://docs.rs/polkit/"

[dependencies]
bitflags = "1"
glib-sys = "=0.14.0"
gobject-sys = "=0.14.0"
gio-sys = "=0.14.0"
glib = "=0.14.0"
gio = "=0.14.0"
ffi = { package = "polkit-sys", path = "sys" }
