[package]
name = "polkit-sys"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
edition = "2018"
build = "build.rs"
keywords = ["PolicyKit", "PolKit", "libpolkit-gobject"]
categories = ["external-ffi-bindings", "authentication", "os::unix-apis"]
description = "Low-level bindings for libpolkit-gobject-1"
license = "Unlicense"
readme = "../../README.md"
homepage = "https://github.com/DankBSD/polkit-rs"
repository = "https://github.com/DankBSD/polkit-rs"
documentation = "https://docs.rs/polkit-sys/"
[package.metadata.system-deps.polkit_gobject_1]
name = "polkit-gobject-1"
version = "0.0"

[package.metadata.system-deps.polkit_gobject_1.v0_101]
version = "0.101"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
glib-sys = "=0.14.0"
gobject-sys = "=0.14.0"
gio-sys = "=0.14.0"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_101 = []
dox = []
